# easy-train

./: .env.example  .gitignore  .gitmodules  GIT_SETUP.md  LICENSE  QUICKSTART.md  README.md  main.py  pyproject.toml  requirements.txt  train.py
config/: __init__.py  base_config.py  default_configs.py
data/: __init__.py  builders.py  prepare.py
examples/: example_configs.py  example_data.jsonl
inference/: __init__.py  download.py  merge_adapter.py  modal_deploy.py
inference/local/lmstudio/: local_inference_lmstudio.py
inference/local/mlx/: local_inference_mlx.py
inference/modal/vllm/: modal_inference_vllm.py
inference/openai_compatible/: openai_compatible_client.py
local/: local_inference_mlx.py
modal/: client.py  modal_inference.py
post_training/modal/unsloth/: post_training_modal_unsloth.py
post_training/tinker/: main.py  sl_loop.py  upload.py
post_training/tinker/sft/: chat_sl_loop.py
rl/: __init__.py  environments.py  rewards.py  train.py
sft/: __init__.py  train.py
tinker_cookbook/chat_app/: tinker_chat_cli.py
tinker_cookbook/rl/: train.py
train/: checkpoint.json  config.py  download_weights.py  main.py  sl_loop.py  upload.py
train/sft/: chat_sl.py  chat_sl_loop.py
utils/: __init__.py  checkpoint_utils.py  logging_utils.py
