[project]
name = "easy-train"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.11.0",
    "datasets>=4.4.1",
    "fastapi>=0.121.2",
    "modal>=1.2.2",
    "peft>=0.18.0",
    "protobuf>=6.33.1",
    "python-dotenv>=1.2.1",
    "sentencepiece>=0.2.1",
    "tinker>=0.3.0",
    "torch>=2.9.1",
    "transformers>=4.57.1",
    "uvicorn>=0.38.0",
    "wandb>=0.23.0",
]
