[project]
name = "easy-train"
version = "0.1.0"
author = "Akshey Deokule"
description = "Easily train using Tinker and deploy with Modal"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chz",
    "datasets",
    "numpy",
    "rich",
    "termcolor",
    "tinker>=0.3.0",
    "torch",
    "transformers",
    "blobfile",
    "inspect-ai",
    "anyio",
    "pylatexenc",
    "sympy",
    "textarena",
    "math-verify",
    "scipy",
    "vllm",
    "modal",
    "peft",
    "mlx_lm"
]
